# scenix

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml  sponsor.yml
benches/: animato_bridge_bench.rs  bvh_bench.rs  camera_bench.rs  helpers_bench.rs  loader_bench.rs  mesh_gen_bench.rs  post_bench.rs  render_bench.rs  scene_graph_bench.rs  texture_bench.rs
crates/scenix/: Cargo.toml
crates/scenix-animato/: Cargo.toml
crates/scenix-animato/src/: camera.rs  driver.rs  lib.rs  material.rs  scene.rs  skeleton.rs  tracks.rs  values.rs
crates/scenix-camera/: Cargo.toml
crates/scenix-camera/src/: controller.rs  cube_camera.rs  frustum.rs  lib.rs  orthographic.rs  perspective.rs
crates/scenix-core/: Cargo.toml
crates/scenix-core/src/: color.rs  error.rs  ids.rs  lib.rs  traits.rs
crates/scenix-helpers/: Cargo.toml
crates/scenix-helpers/src/: arrow.rs  axes.rs  bounding_box.rs  camera_helper.rs  grid.rs  lib.rs  light_helper.rs  line_geometry.rs  skeleton_helper.rs
crates/scenix-input/: Cargo.toml
crates/scenix-input/src/: keyboard.rs  lib.rs  pointer.rs
crates/scenix-light/: Cargo.toml
crates/scenix-light/src/: ambient.rs  area.rs  directional.rs  hemisphere.rs  lib.rs  point.rs  probe.rs  shadow.rs  spot.rs
crates/scenix-loader/: Cargo.toml
crates/scenix-loader/src/: asset_cache.rs  gltf.rs  hdr.rs  image.rs  ktx2.rs  lib.rs  obj.rs  stl.rs
crates/scenix-material/: Cargo.toml
crates/scenix-material/src/: depth.rs  lambert.rs  lib.rs  line.rs  normal.rs  pbr.rs  physical.rs  points.rs  shader.rs  toon.rs  traits.rs  unlit.rs  wireframe.rs
crates/scenix-math/: Cargo.toml
crates/scenix-math/benches/: math_bench.rs
crates/scenix-math/src/: bounds.rs  cylindrical.rs  euler.rs  lib.rs  mat.rs  plane.rs  quat.rs  ray.rs  spherical.rs  transform.rs  vec.rs
crates/scenix-mesh/: Cargo.toml
crates/scenix-mesh/src/: batched.rs  buffer.rs  geometry.rs  instanced.rs  lib.rs  mesh.rs  morph.rs  shape.rs
crates/scenix-mesh/src/primitives/: mod.rs
crates/scenix-post/: Cargo.toml
crates/scenix-post/src/: lib.rs  shader.wgsl
crates/scenix-raycaster/: Cargo.toml
crates/scenix-raycaster/src/: bvh.rs  intersection.rs  lib.rs  raycaster.rs
crates/scenix-renderer/: Cargo.toml
crates/scenix-renderer/src/: config.rs  environment.rs  frame.rs  gbuffer.rs  gpu_scene.rs  lib.rs  material.rs  pipeline_cache.rs  renderer.rs  shadow.rs
crates/scenix-renderer/src/pass/: culling.rs  forward_pass.rs  geometry_pass.rs  lighting_pass.rs  mod.rs  shadow_pass.rs  sort.rs
crates/scenix-renderer/src/shaders/: deferred_resolve.wgsl  mesh_color.wgsl  pbr.frag.wgsl  pbr.vert.wgsl  shadow_depth.vert.wgsl  unlit.frag.wgsl
crates/scenix-scene/: Cargo.toml
crates/scenix-scene/src/: fog.rs  graph.rs  iter.rs  lib.rs  lod.rs  node.rs  sprite.rs
crates/scenix-texture/: Cargo.toml
crates/scenix-texture/src/: atlas.rs  format.rs  lib.rs  mipmap.rs  sampler.rs  texture.rs  video.rs
crates/scenix-wasm/: Cargo.toml
crates/scenix-wasm/src/: input.rs  lib.rs  web.rs
crates/scenix/src/: lib.rs
crates/scenix/tests/: foundation.rs
docs/: README.md  benchmarks.md  concepts.md  getting-started.md  installation.md  materials-guide.md  platform-guide.md  project-setup.md  quick-start.md  release-v1.0.0.md  release-v1.1.0.md  release-v1.2.0.md
docs/api/: facade-crate.md  scenix-animato.md  scenix-camera.md  scenix-core.md  scenix-helpers.md  scenix-input.md  scenix-light.md  scenix-loader.md  scenix-material.md  scenix-math.md  scenix-mesh.md  scenix-post.md  scenix-raycaster.md  scenix-renderer.md  scenix-scene.md  scenix-texture.md  scenix-wasm.md
docs/concepts/: README.md  animation-with-animato.md  architecture-overview.md  cameras.md  error-handling.md  feature-flags.md  helpers.md  lights.md  materials.md  meshes-and-geometry.md  no-std.md  post-processing.md  raycasting.md  renderer.md  scene-graph.md  textures.md  transforms.md  wasm-and-browser.md
docs/deployment/: README.md  desktop.md  dioxus.md  github-pages.md  leptos.md  tauri.md  web-wasm.md
docs/examples/: README.md  animato-integration.md  environment-map.md  fog-demo.md  gltf-scene.md  hello-cube.md  helpers-demo.md  instanced-mesh.md  lod-demo.md  morph-targets.md  orbit-camera.md  pbr-sphere.md  physical-material.md  post-processing.md  raycasting.md  render-target-capture.md  shadow-demo.md  sprite-particles.md  toon-shading.md  wasm-viewer.md
docs/guides/: add-lights-and-shadows.md  animate-scene-with-animato.md  build-for-wasm.md  create-pbr-material.md  create-your-first-scene.md  deploy-to-github-pages.md  (+7 more)
examples/: animato_integration.rs  environment_map.rs  fog_demo.rs  gltf_scene.rs  hello_cube.rs  helpers_demo.rs  instanced_mesh.rs  light_probe.rs  lod_demo.rs  material_pipeline_keys.rs  materials_and_lights.rs  morph_targets.rs  orbit_camera.rs  pbr_sphere.rs  physical_material.rs  post_processing.rs  raycasting.rs  render_target_capture.rs  shadow_demo.rs  sprite_particles.rs  textures_and_camera.rs  toon_shading.rs
examples/wasm_viewer/: Cargo.toml
examples/wasm_viewer/src/: lib.rs
tests/: animato_bridge.rs  camera.rs  camera_serde.rs  core_serde.rs  helpers.rs  light_probe.rs  light_serde.rs  light_types.rs  loader.rs  material_pipeline.rs  material_serde.rs  mesh_geometry.rs  mesh_primitives.rs  mesh_serde.rs  post.rs  post_gpu.rs  raycaster.rs  renderer.rs  renderer_gpu.rs  scene_graph.rs  scene_serde.rs  scenix_foundation.rs  scenix_v08.rs  scenix_v09.rs  scenix_v10.rs  texture.rs  texture_serde.rs  wasm.rs
website/: Cargo.toml  Trunk.toml  index.html
website/public/models/: README.md
website/src/: app.rs  main.rs  styles.css
website/src/components/: code_panel.rs  crate_map.rs  demo_panel.rs  examples.rs  feature_grid.rs  footer.rs  hero.rs  mod.rs  navbar.rs
website/src/scenix_demo/: bridge.rs  controls.rs  fallback.rs  mod.rs
(+29 files in other folders)
