[workspace]
resolver = "2"
members = [
    "crates/scenix-math",
    "crates/scenix-core",
    "crates/scenix-input",
    "crates/scenix-scene",
    "crates/scenix-camera",
    "crates/scenix-mesh",
    "crates/scenix-material",
    "crates/scenix-light",
    "crates/scenix-texture",
    "crates/scenix-loader",
    "crates/scenix-post",
    "crates/scenix-renderer",
    "crates/scenix",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AarambhDevHub/scenix"
authors = ["Aarambh Dev Hub"]
rust-version = "1.89"
readme = "README.md"

[workspace.dependencies]
scenix-math = { path = "crates/scenix-math", version = "0.7.0", default-features = false }
scenix-core = { path = "crates/scenix-core", version = "0.7.0", default-features = false }
scenix-input = { path = "crates/scenix-input", version = "0.7.0", default-features = false }
scenix-scene = { path = "crates/scenix-scene", version = "0.7.0", default-features = false }
scenix-camera = { path = "crates/scenix-camera", version = "0.7.0", default-features = false }
scenix-mesh = { path = "crates/scenix-mesh", version = "0.7.0", default-features = false }
scenix-material = { path = "crates/scenix-material", version = "0.7.0", default-features = false }
scenix-light = { path = "crates/scenix-light", version = "0.7.0", default-features = false }
scenix-texture = { path = "crates/scenix-texture", version = "0.7.0", default-features = false }
scenix-loader = { path = "crates/scenix-loader", version = "0.7.0", default-features = false }
scenix-post = { path = "crates/scenix-post", version = "0.7.0", default-features = false }
scenix-renderer = { path = "crates/scenix-renderer", version = "0.7.0", default-features = false }

approx = { version = "0.5", default-features = false }
bytemuck = { version = "1", default-features = false, features = ["derive"] }
gltf = { version = "1.4.1", default-features = false }
image = { version = "0.25.10", default-features = false }
ktx2 = { version = "0.4.0", default-features = false }
libm = { version = "0.2" }
pollster = { version = "0.4" }
raw-window-handle = { version = "0.6" }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1" }
slotmap = { version = "1", default-features = false }
stl_io = { version = "0.11.0" }
tobj = { version = "4.0.3", default-features = false }
wgpu = { version = "29.0.3" }
winit = { version = "0.30.13" }

[profile.release]
codegen-units = 1
lto = "thin"
