[package]
name = "scenix-animato"
description = "Animato 1.4 bridge for scenix scenes, cameras, materials, and skeleton poses."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true

[features]
default = ["std"]
std = [
    "animato/std",
    "scenix-camera/std",
    "scenix-core/std",
    "scenix-material/std",
    "scenix-math/std",
    "scenix-scene/std",
]
serde = [
    "dep:serde",
    "animato/serde",
    "scenix-camera/serde",
    "scenix-core/serde",
    "scenix-material/serde",
    "scenix-math/serde",
    "scenix-scene/serde",
]

[dependencies]
animato = { workspace = true, features = ["spring", "tween"] }
scenix-camera = { workspace = true }
scenix-core = { workspace = true }
scenix-material = { workspace = true }
scenix-math = { workspace = true }
scenix-scene = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[[bench]]
name = "animato_bridge_bench"
path = "../../benches/animato_bridge_bench.rs"
harness = false

[[test]]
name = "animato_bridge"
path = "../../tests/animato_bridge.rs"
