[package]
name = "scenix-input"
description = "Platform-agnostic input state types for scenix."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true

[features]
default = ["std"]
std = ["scenix-math/std"]
serde = ["dep:serde", "scenix-math/serde"]

[dependencies]
scenix-math = { workspace = true }
serde = { workspace = true, optional = true }
