[package]
name = "scenix-light"
description = "GPU-free light types, shadow configuration, and light probes for scenix."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true

[features]
default = ["std"]
std = ["scenix-core/std", "scenix-math/std"]
serde = ["dep:serde", "scenix-core/serde", "scenix-math/serde"]

[dependencies]
scenix-core = { workspace = true }
scenix-math = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
scenix-scene = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "light_types"
path = "../../tests/light_types.rs"

[[test]]
name = "light_probe"
path = "../../tests/light_probe.rs"

[[test]]
name = "light_serde"
path = "../../tests/light_serde.rs"
