[package]
name = "scenix-post"
description = "wgpu post-processing stack and full-screen effects for scenix."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true

[features]
default = ["std"]
std = ["scenix-core/std", "scenix-math/std"]
serde = ["dep:serde", "scenix-core/serde", "scenix-math/serde", "wgpu/serde"]

[dependencies]
bytemuck = { workspace = true }
scenix-core = { workspace = true }
scenix-math = { workspace = true }
serde = { workspace = true, optional = true }
wgpu = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "post_bench"
path = "../../benches/post_bench.rs"
harness = false

[[test]]
name = "post"
path = "../../tests/post.rs"

[[test]]
name = "post_gpu"
path = "../../tests/post_gpu.rs"
