[package]
name = "scenix-wasm"
description = "Browser/WASM renderer wrapper and DOM input helpers for scenix."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "scenix-camera/std",
    "scenix-core/std",
    "scenix-input/std",
    "scenix-light/std",
    "scenix-material/std",
    "scenix-math/std",
    "scenix-mesh/std",
    "scenix-helpers/std",
    "scenix-raycaster/std",
    "scenix-animato/std",
    "scenix-renderer/std",
    "scenix-scene/std",
]
serde = [
    "scenix-camera/serde",
    "scenix-core/serde",
    "scenix-input/serde",
    "scenix-light/serde",
    "scenix-material/serde",
    "scenix-math/serde",
    "scenix-mesh/serde",
    "scenix-helpers/serde",
    "scenix-raycaster/serde",
    "scenix-animato/serde",
    "scenix-renderer/serde",
    "scenix-scene/serde",
]

[dependencies]
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
scenix-camera = { workspace = true }
scenix-core = { workspace = true }
scenix-input = { workspace = true }
scenix-light = { workspace = true }
scenix-material = { workspace = true }
scenix-math = { workspace = true }
scenix-mesh = { workspace = true }
scenix-helpers = { workspace = true }
scenix-raycaster = { workspace = true }
scenix-animato = { workspace = true }
scenix-renderer = { workspace = true }
scenix-scene = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Document",
    "Element",
    "Event",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "PointerEvent",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
    "Window",
    "WheelEvent",
    "console",
] }

[[test]]
name = "wasm"
path = "../../tests/wasm.rs"
