[package]
name = "scenix"
description = "Facade crate for the scenix Renderer APIs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true

[features]
default = ["std", "scene", "camera", "mesh", "material", "light", "texture", "raycaster", "helpers"]
std = ["scenix-math/std", "scenix-core/std", "scenix-input/std", "scenix-scene?/std", "scenix-camera?/std", "scenix-mesh?/std", "scenix-material?/std", "scenix-light?/std", "scenix-texture?/std", "scenix-loader?/std", "scenix-post?/std", "scenix-renderer?/std", "scenix-raycaster?/std", "scenix-helpers?/std", "scenix-animato?/std", "scenix-wasm?/std"]
scene = ["dep:scenix-scene"]
camera = ["dep:scenix-camera"]
mesh = ["dep:scenix-mesh"]
material = ["dep:scenix-material"]
light = ["dep:scenix-light"]
texture = ["dep:scenix-texture"]
loader = ["dep:scenix-loader"]
post = ["dep:scenix-post", "scenix-renderer?/post"]
renderer = ["dep:scenix-renderer"]
raycaster = ["dep:scenix-raycaster"]
helpers = ["dep:scenix-helpers"]
animato = ["dep:scenix-animato"]
wasm = ["dep:scenix-wasm"]
libm = ["scenix-math/libm"]
serde = ["scenix-math/serde", "scenix-core/serde", "scenix-input/serde", "scenix-scene?/serde", "scenix-camera?/serde", "scenix-mesh?/serde", "scenix-material?/serde", "scenix-light?/serde", "scenix-texture?/serde", "scenix-loader?/serde", "scenix-post?/serde", "scenix-renderer?/serde", "scenix-raycaster?/serde", "scenix-helpers?/serde", "scenix-animato?/serde", "scenix-wasm?/serde"]
approx = ["scenix-math/approx"]
gpu = ["scenix-core/gpu"]

[dependencies]
scenix-core = { workspace = true }
scenix-input = { workspace = true }
scenix-math = { workspace = true }
scenix-camera = { workspace = true, optional = true }
scenix-light = { workspace = true, optional = true }
scenix-loader = { workspace = true, optional = true }
scenix-material = { workspace = true, optional = true }
scenix-mesh = { workspace = true, optional = true }
scenix-post = { workspace = true, optional = true }
scenix-raycaster = { workspace = true, optional = true }
scenix-renderer = { workspace = true, optional = true }
scenix-scene = { workspace = true, optional = true }
scenix-texture = { workspace = true, optional = true }
scenix-helpers = { workspace = true, optional = true }
scenix-animato = { workspace = true, optional = true }
scenix-wasm = { workspace = true, optional = true }

[dev-dependencies]
pollster = { workspace = true }

[[test]]
name = "scenix_foundation"
path = "../../tests/scenix_foundation.rs"

[[example]]
name = "materials_and_lights"
path = "../../examples/materials_and_lights.rs"

[[example]]
name = "material_pipeline_keys"
path = "../../examples/material_pipeline_keys.rs"

[[example]]
name = "light_probe"
path = "../../examples/light_probe.rs"

[[example]]
name = "textures_and_camera"
path = "../../examples/textures_and_camera.rs"

[[example]]
name = "orbit_camera"
path = "../../examples/orbit_camera.rs"

[[example]]
name = "hello_cube"
path = "../../examples/hello_cube.rs"
required-features = ["renderer"]

[[example]]
name = "pbr_sphere"
path = "../../examples/pbr_sphere.rs"
required-features = ["renderer"]

[[example]]
name = "physical_material"
path = "../../examples/physical_material.rs"
required-features = ["renderer"]

[[example]]
name = "toon_shading"
path = "../../examples/toon_shading.rs"
required-features = ["renderer"]

[[example]]
name = "shadow_demo"
path = "../../examples/shadow_demo.rs"
required-features = ["renderer"]

[[example]]
name = "gltf_scene"
path = "../../examples/gltf_scene.rs"
required-features = ["loader", "renderer"]

[[example]]
name = "post_processing"
path = "../../examples/post_processing.rs"
required-features = ["renderer", "post"]

[[example]]
name = "raycasting"
path = "../../examples/raycasting.rs"

[[example]]
name = "helpers_demo"
path = "../../examples/helpers_demo.rs"

[[example]]
name = "instanced_mesh"
path = "../../examples/instanced_mesh.rs"

[[example]]
name = "lod_demo"
path = "../../examples/lod_demo.rs"

[[example]]
name = "morph_targets"
path = "../../examples/morph_targets.rs"

[[example]]
name = "fog_demo"
path = "../../examples/fog_demo.rs"

[[example]]
name = "sprite_particles"
path = "../../examples/sprite_particles.rs"

[[example]]
name = "environment_map"
path = "../../examples/environment_map.rs"

[[example]]
name = "animato_integration"
path = "../../examples/animato_integration.rs"
required-features = ["animato"]

[[test]]
name = "scenix_v08"
path = "../../tests/scenix_v08.rs"

[[test]]
name = "scenix_v09"
path = "../../tests/scenix_v09.rs"

[[test]]
name = "scenix_v10"
path = "../../tests/scenix_v10.rs"
