[package]
name = "scenix-wasm-viewer"
version = "1.2.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
scenix = { path = "../../crates/scenix", default-features = false, features = ["std", "wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }

[workspace]
